sea-query-derive/tests/compile-fail/path_iden.rs
use sea_query::Iden;

#[derive(Clone, Iden)]
enum Asset {
    Table,
    Id,
    AssetName,
    #[iden]
    Creation,
}

fn main() {}
