sea-query-derive/tests/compile-fail/path_iden.stderr
error: The iden attribute supports only the formats `#[iden = "name"]` and #[iden(flatten)]
 --> $DIR/path_iden.rs:8:7
  |
8 |     #[iden]
  |       ^^^^
